# bible-verse-mapping-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/verse-mapping/: AGENT.md
schemas/: output.schema.json
src/verse_mapping/: __init__.py  __main__.py  agent.py  config.py  linkify.py  models.py  report.py
src/verse_mapping/mcp/: __init__.py  base.py  bibletext.py  crossrefs.py  open_content.py  original_lang.py  reference.py
src/verse_mapping/pipeline/: __init__.py  application.py  context.py  crossrefs.py  keywords.py  translations.py
tests/: conftest.py  helpers.py  test_mcp_servers.py  test_models.py  test_pipeline.py
tests/golden/: test_golden.py
tests/golden/fixtures/: 1_timothy_2_11_15.json  acts_2.json  ephesians_2_8_10.json  exodus_12.json  genesis_22.json  hebrews_10.json  isaiah_53_5_6.json  john_3_16.json  psalm_110.json  romans_3_21_26.json
