[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verse-mapping-agent"
version = "0.1.0"
description = "Biblical Verse Mapping AI Agent with MCP integrations"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "anthropic>=0.40",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/verse_mapping"]

[tool.ruff]
target-version = "py311"
line-length = 100
